...
    <string name="position_central_midfield">Central Midfield</string>
    <string name="position_attacking_midfield">Attacking Midfield</string>
    <string name="position_right_midfield">Right Midfield</string>
    <string name="position_left_midfield">Left Midfield</string>
    <string name="position_midfield">Midfield</string>
    <string name="position_left_winger">Left Winger</string>
    <string name="position_right_winger">Right Winger</string>
    <string name="position_offence">Offence</string>
    <string name="position_centre_forward">Centre-Forward</string>
    <string name="non">Non</string>

    <!-- Stage Type -->
    <string name="stage_league">League Stage</string>
...
    <string name="top_players_description_name"> - name</string>
    <string name="top_players_description_matches"> - matches,</string>
    <string name="top_players_description_goals"> - goals,</string>
    <string name="top_players_description_assists"> - assists,</string>
    <string name="top_players_description_penalties"> - penalties.</string>
    <string name="tab_matches_completed">Completed</string>
    <string name="tab_matches_ahead">Ahead</string>
    <string name="tour">tour</string>
    <string name="first_match_no_statistics">There are no statistics, this is the first match.</string>
    <string name="calendar_add_event">Add match to calendar</string>
    <string name="calendar_remove_event">Remove match from calendar</string>
    <string name="calendar_event_failed">Could not update the calendar event. Please try again.</string>
    <string name="stat_home_wins_hyphen">Home wins -</string>
    <string name="stat_draws_hyphen">Draws -</string>
    <string name="stat_away_wins_hyphen">Away wins -</string>

    <!-- TeamInfo Screen -->
    <string name="team_tab_squad">Squad</string>
    <string name="team_tab_info">Information</string>
    <string name="team_tab_matches">Matches</string>
    <string name="team_manager">Manager</string>
    <string name="player_name">Name</string>
    <string name="player_nationality">Nationality</string>
    <string name="player_age">Age</string>
    <string name="team_info_area">Area</string>
    <string name="team_info_address">Address</string>
    <string name="team_info_founded">Founded</string>
    <string name="team_info_venue">Venue</string>
    <string name="team_news">Team news</string>

    <!-- Person Screen -->
    <string name="player_number">Number</string>
    <string name="player_position">Position</string>

    <!-- Common -->
    <string name="reload">Reload</string>
    <string name="back">Back</string>
</resources>
