...
                    form = "W,W,D,L,W",
                ),
                Table(
                    position = 3,
                    team = Team(
                        id = 57,
                        name = "Arsenal FC",
                        shortName = "Arsenal",
                        tla = "ARS",
                        crest = "https://crests.football-data.org/57.png",
                    ),
                    playedGames = 27,
                    won = 15,
...
